<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InComeActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:background="@color/colorPrimary"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/ln1"
            android:layout_below="@+id/txtIncome"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <EditText
                    android:id="@+id/edtIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/income"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:layout_gravity="bottom"
                android:id="@+id/imgCalendar"
                android:src="@drawable/ic_date_range_light_blue_a200_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ln2"
            android:layout_below="@+id/ln1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <EditText
                    android:id="@+id/edtAmountIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/baht"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


        <Button
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveIncome"
            android:textStyle="bold"
            android:text="@string/save_income"/>




    </RelativeLayout>

</LinearLayout>